[package]
name = "lmetrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
metrics-process = "1.3.0"
rand = "0.8.5"
tokio = {version = "1.37.0", features=["full"]}
